src/test/deca/context/invalid/provided/dec_var_with_init.deca
 
// Resultats:
//Erreur contextuelle
//Ligne 9: non defined type

 cree le 06/01/2023

{
    string z = "T && I = L";
    int x = 10;
    float y = 5.6; 

}
